membuat website Coffee Shop

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h3>Kenapa memilih kopi kami?</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
-            pariatur iusto quasi, quisquam temporibus aspernatur.
+            pariatur iusto quasi, quisquam temporibus aspirator.
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
